<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/enTete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/barreOutil">

            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logopetit"
                    android:layout_centerVertical="true"

            />

            <TextView
                    android:id="@+id/titre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/logo"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"


            />

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/corps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/enTete">

            <Button
                    android:id="@+id/buttonConnect"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/connexion"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:background="@color/boutonConnect"
                    android:textColor="@color/blanc"
            />

            <Button
                    android:id="@+id/button1"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/buttonConnect"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/boutonAction"
                    android:text="@string/b1"
            />

            <Button
                    android:id="@+id/button2"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/button1"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/boutonAction"
                    android:text="@string/b2"
            />

            <Button
                    android:id="@+id/button3"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/button2"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/boutonAction"
                    android:text="@string/b3"
            />

            <Button
                    android:id="@+id/button4"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/button3"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/boutonAction"
                    android:text="@string/b3"
            />


        </RelativeLayout>






    </RelativeLayout>


</android.support.constraint.ConstraintLayout>